the sanity checks work now holy shit

--- a/arbitrator/prover/Cargo.toml
+++ b/arbitrator/prover/Cargo.toml
@@ -35,6 +35,7 @@ ark-std = "0.4.0"
 ark-ff = "0.4.0"
 ark-ec = "0.4.0"
 ark-serialize = "0.4.0"
+num-bigint = "0.4"
 
 kzgbn254 = { git = "https://github.com/afkbyte/rust-kzg-bn254.git", branch = "master", package = "rust-kzg-bn254" }
 
